Revision history for Toadfarm

0.17
       * Add status message to Ubic service

0.1601   Thu Oct 31 20:12:43 2013
       * Ubic is not bundled

0.16     Wed Oct 30 20:13:38 2013
       * Sub app inherit toadfarm config

0.15     Wed Oct 30 19:01:54 2013
       * Allowing Ubic::Service::Toadfarm to start any hypnotoad
         application.

0.14     Wed Oct 30 18:44:14 2013
       * Add Ubic::Service::Toadfarm

0.1301   Fri Sep  6 23:43:40 2013
       * Fix repository url

0.13     Fri Sep  6 10:43:37 2013
       * Add support for config

0.12     Wed Aug  7 15:34:15 2013
       * Change from "git remote update ..." to "git fetch ..."

0.11     Tue Jul 23 10:22:17 2013
       * Add support for "secret" in config file

0.1001   Mon Jun 10 22:30:19 2013
       * Capturing more system errors

0.10     Tue May 21 20:50:24 2013
       * Add AccessLog plugin

0.09     Tue May 21 01:13:10 2013
       * Add support for multiple repositories with the same name

0.0801   Sun May 19 14:46:40 2013
       * render_json() and render_text() is deprecated

0.08     Thu May  9 12:30:49 2013
       * Remove VERSION from Makefile.PL
       * Fix mouting app without conditions

0.07     Sun May  5 16:26:13 2013
       * Improved status page for reload plugin
       * Add support for custom error pages and assets

0.06     Thu May  2 00:18:17 2013
       * Fix need to run chdir before git commands
       * Fix argument parsing for script/toadfarm

0.05     Wed May  1 22:45:02 2013
       * Add support for custom log level from config
       * Fix major routing bug

0.04     Wed May  1 19:56:25 2013
       * Add Reload plugin

0.03     Tue Apr 30 02:22:38 2013
       * Add Ubuntu setup example
       * Fix cannot pass MOJO_CONFIG to sub apps
       * Accept log settings from config

0.02     Mon Apr 29 21:36:48 2013
       * Add $VERSION
       * Add suppor for "plugins"
       * Will not poke into mojolicious internals

0.01     Mon Apr 29 20:28:14 2013