@@ -2,6 +2,7 @@ Revision history for Toadfarm
 
 0.17
        * Add status message to Ubic service
+       * Add support for custom status resource
 
 0.1601   Thu Oct 31 20:12:43 2013
        * Ubic is not bundled
